Got SDL to work properly

--- a/chip8_x64/chip8_x64.vcxproj.filters
+++ b/chip8_x64/chip8_x64.vcxproj.filters
@@ -19,4 +19,8 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <Library Include="..\..\..\SDL2-2.0.8\lib\x64\SDL2.lib" />
+    <Library Include="..\..\..\SDL2-2.0.8\lib\x64\SDL2main.lib" />
+  </ItemGroup>
 </Project>
