--- a/chip8_x64/chip8_x64.vcxproj
+++ b/chip8_x64/chip8_x64.vcxproj
@@ -128,6 +128,10 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <Library Include="..\..\..\SDL2-2.0.8\lib\x64\SDL2.lib" />
+    <Library Include="..\..\..\SDL2-2.0.8\lib\x64\SDL2main.lib" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
