--- a/chip8_x64/chip8_x64.vcxproj
+++ b/chip8_x64/chip8_x64.vcxproj
@@ -126,11 +126,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Chip8CPU.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Library Include="..\..\..\SDL2-2.0.8\lib\x64\SDL2.lib" />
     <Library Include="..\..\..\SDL2-2.0.8\lib\x64\SDL2main.lib" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Chip8CPU.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
